Upgraded to svg-salamander release 0.1.9 which fixed the optimized svg path error that Bertho found, many thanks to Mark McKay for fixing the bug so promptly.